--- a/coupon/templates/coupon/redeem.html
+++ b/coupon/templates/coupon/redeem.html
@@ -1,6 +1,10 @@
 {% extends 'coupon/base.html' %}
 {% load staticfiles %}
 
+{% block customcss %}
+
+{% endblock %}
+
 {% block content %}
 Redeem page
 {% endblock %}
