--- a/coupon/static/coupon/css/generate.css
+++ b/coupon/static/coupon/css/generate.css
@@ -1,44 +1,39 @@
 * {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
-	width: 100%;
-	height: 100%;
-}
-#generate-wrapper { 
-	position: relative;
-	background-color: #ecf0f1;
-	margin-top: 100px;
-	height: 400px;
-	width: 600px; 
+    width: 100%;
+    height: 100%;
 }
 
-#generate-wrapper .row {
-	height: 100%; 
-	margin: 0px !important;
-	padding: 0px !important;
+.col-sm-12 {
+    padding: 0px !important;
+    margin: 0px !important;
 }
 
-#generate-wrapper .row .col-sm-12 {
-	height: 100%;
-	margin: 0px !important;
-	padding: 0px !important;
+.container-fluid {
+    padding: 0px !important;
+    margin: 0px !important;
 }
 
-#generate-controls {  
-	position: absolute;
-	width: 100%;
-	height: 20%;
-	bottom: 70px; 
+.coupon-wrapper { 
+    margin-top: 100px;
+    height: 100%;
+    width: 100%;
+    padding: 0px !important;
+    margin: 0px !important;
 }
 
-#generate-label {
-	position: absolute;
-	width: 100%;
-	height: 50px;
-	top: 150px;
-	text-align: center;
-	font-size: 35px;
-	background-color: #bdc3c7;
+#qrcode {
+    width: 100%;
+    height: 100%;
 }
+
+.qrcode-img {
+    display: block;
+    margin: 0 auto;
+}
+
+/* Responsive: Portrait tablets and up */
+@media screen and (min-width: 768px) {}
