--- a/coupon/templates/coupon/qr_tag.html
+++ b/coupon/templates/coupon/qr_tag.html
@@ -1,1 +1,1 @@
-<img class="qrcode-img" src="https://chart.googleapis.com/chart?cht=qr&amp;chs={{ size }}x{{ size }}&amp;chl={{ text }}" alt="{{ text }}" />
+<img class="qrcode-img" src="https://chart.apis.google.com/chart?cht=qr&amp;chs={{ size }}x{{ size }}&amp;chld=L|1&amp;chl={{ code_url }}" alt="{{ code_url }}" /> 
