--- a/commons/static/commons/css/error404.css
+++ b/commons/static/commons/css/error404.css
@@ -4,7 +4,7 @@ body,
 html {
     height: 100%;
     background-color: #e4e4e4;
-    margin-top: 50px;
+    margin-top: 10px;
 }
 
 h2 {
@@ -31,5 +31,12 @@ p {
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-device-pixel-ratio: 2) and (device-aspect-ratio: 2/3) and (orientation:portrait) {
     html {
         margin-top: 0px;
+    }
+}
+
+@media (min-width:961px) {
+    /* tablet, landscape iPad, low-res laptops and desktops */
+    html { 
+        margin-top: 50px;
     }
 }
