--- a/coupon/static/coupon/css/generate.css
+++ b/coupon/static/coupon/css/generate.css
@@ -63,12 +63,15 @@ body {
     }
 }
 
-
-/* Responsive: Portrait tablets and up */
-
+@media screen and (min-width: 504px) {
+    #qrcode { 
+        width: 500px;
+        height: 540px;
+    }
+}
+ 
 @media screen and (min-width: 768px) {
-    #qrcode {
-        position: relative;
+    #qrcode { 
         width: 380px;
         height: 500px;
     }
@@ -76,8 +79,7 @@ body {
 
 @media (min-width:961px) {
     /* tablet, landscape iPad, lo-res laptops ands desktops */
-    #qrcode {
-        position: relative;
+    #qrcode { 
         width: 380px;
         height: 500px;
     }
