--- a/coupon/templates/coupon/already_redeemed.html
+++ b/coupon/templates/coupon/already_redeemed.html
@@ -14,7 +14,7 @@
 			  <div id="summary">
 			    <h1>Code Redeem</h1>
 			    <label><strong>CODE:</strong> {{code}}</label>
-			    <label><strong>DATE CREATED:</strong> {{created}}</label>
+			    <label><strong>CREATED:</strong> {{created}}</label>
 			    <label><strong>EXPIRES:</strong> {{expires}}</label>
 			    <label><strong>REDEEMED:</strong> {{redeemed}}</label>
 			    <div class="center-buttons">
