--- a/coupon/templates/coupon/redeem.html
+++ b/coupon/templates/coupon/redeem.html
@@ -14,7 +14,7 @@
 			  <div id="summary">
 			    <h1>Code Redeem</h1>
 			    <label><strong>CODE:</strong> {{code}}</label>
-			    <label><strong>DATE CREATED: {{created}}</strong></label>
+			    <label><strong>CREATED: {{created}}</strong></label>
 			    <label><strong>EXPIRES: {{expires}}</strong></label>
 			    <div class="center-buttons">
 				    <button class="redeem-coupon">Redeem</button>
