--- a/coupon/templates/coupon/expired.html
+++ b/coupon/templates/coupon/expired.html
@@ -14,8 +14,8 @@
 			  <div id="summary">
 			    <h1>Code Redeem</h1>
 			    <label><strong>CODE:</strong> {{code}}</label>
-			    <label><strong>CREATED: {{created}}</strong></label>
-			    <label><strong>EXPIRES: {{expires}}</strong></label>
+			    <label><strong>CREATED:</strong> {{created}}</label>
+			    <label><strong>EXPIRES:</strong> {{expires}}</label>
 			    <div class="center-buttons">
 				    <label class="expired"><strong>EXPIRED</strong></label>
 			    </div>
