--- a/coupon/templates/coupon/redeem.html
+++ b/coupon/templates/coupon/redeem.html
@@ -14,8 +14,8 @@
 			  <div id="summary">
 			    <h1>Code Redeem</h1>
 			    <label><strong>CODE:</strong> {{code}}</label>
-			    <label><strong>CREATED: {{created}}</strong></label>
-			    <label><strong>EXPIRES: {{expires}}</strong></label>
+			    <label><strong>CREATED:</strong> {{created}}</label>
+			    <label><strong>EXPIRES:</strong> {{expires}}</label>
 			    <div class="center-buttons">
 				    <button class="redeem-coupon">Redeem</button>
 				    <button class="cancel-coupon">Cancel</button>
