--- a/coupon/static/coupon/css/generate.css
+++ b/coupon/static/coupon/css/generate.css
@@ -1,94 +1,42 @@
 * {
     box-sizing: border-box;
-}
+} 
 
 body {
     background: #f6d9eb;
     width: 100%;
     height: 100%;
+ 
+    background-color: #f7f9f8;
 }
-
+ 
 .col-sm-12 {
     height: 100%;
     padding: 0px !important;
-    margin: 0px !important;
+    margin: 0px !important; 
 }
 
-.container-fluid {
-    padding: 0px !important;
-    margin: 0px !important;
+.container-fluid { 
     height: 100%;
 }
+ 
 
-.coupon-wrapper {
-    margin-top: 100px;
-    height: 100%;
-    width: 100%;
-    padding: 0px !important;
-    margin: 0px !important;
-}
-
-#qrcode {
+#coupon-container { 
+    float: left;
     position: relative;
-    width: 100%;
-    height: 100%;
-}
-
+  
+} 
+ 
 .qrcode-img {
-    position: absolute;
-    margin-left: auto;
-    margin-right: auto;
-    left: 0;
-    right: 0;
-    top: 15%;
-    display: block;
-}
-
-.coupon-img {
-    width: 100%;
-    height: 100%;
-}
+    position:absolute;   
+    bottom: 4%;
+    right : 4%; 
+    width: 20%;
+    height: 15%;
+} 
  
-
-@media only screen and (min-device-width: 320px) and (max-device-width: 480px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-    .qrcode-img {
-        height: 80px;
-    }
-}
-
- 
-@media only screen and (min-device-width: 375px) and (max-device-width: 667px) and (-webkit-min-device-pixel-ratio: 2) and (orientation: portrait) {
-    .qrcode-img {
-        height: 110px;
-    }
-}
-
-@media screen and (min-width: 504px) {
-    #qrcode { 
+@media (min-width:600px)  {
+    .coupon-img  {
         width: 500px;
-        height: 540px;
     }
-}
- 
-@media screen and (min-width: 768px) {
-    #qrcode { 
-        width: 380px;
-        height: 500px;
-    }
-}
-
-@media (min-width:961px) {
-    /* tablet, landscape iPad, lo-res laptops ands desktops */
-    #qrcode { 
-        width: 380px;
-        height: 500px;
-    }
-}
-
-@media (min-width:1025px) {
-    /* big landscape tablets, laptops, and desktops */
-}
-
-@media (min-width:1281px) {
-    /* hi-res laptops and desktops */
 }
