--- a/coupon/templates/coupon/not_active.html
+++ b/coupon/templates/coupon/not_active.html
@@ -14,12 +14,9 @@
 			  <div id="summary">
 			    <h1>Code Redeem</h1>
 			    <label><strong>CODE:</strong> {{code}}</label>
-			    <label><strong>CREATED:</strong> {{created}}</label>
 			    <label><strong>START:</strong> {{started}}</label> 
-			    <label><strong>EXPIRES:</strong> {{expires}}</label>
-			    <label><strong>REDEEMED:</strong> {{redeemed}}</label>
 			    <div class="center-buttons">
-				    <label class="expired"><strong>ALREADY REDEEMED</strong></label>
+				    <label class="expired"><strong>COUPON NOT ACTIVE YET</strong></label>
 			    </div>
 			  </div> 
 	  		 </div> 
