--- a/coupon/templates/coupon/redeem.html
+++ b/coupon/templates/coupon/redeem.html
@@ -15,6 +15,7 @@
 			    <h1>Code Redeem</h1>
 			    <label><strong>CODE:</strong> {{code}}</label>
 			    <label><strong>CREATED:</strong> {{created}}</label>
+			    <label><strong>START:</strong> {{started}}</label> 
 			    <label><strong>EXPIRES:</strong> {{expires}}</label>
 			    <div class="center-buttons">
 				    <button class="redeem-coupon">Redeem</button>
