--- a/coupon/static/coupon/css/generate.css
+++ b/coupon/static/coupon/css/generate.css
@@ -1,39 +1,43 @@
 * {
     box-sizing: border-box;
-} 
+}
 
 body {
     background: #f6d9eb;
     width: 100%;
     height: 100%;
- 
     background-color: #f7f9f8;
 }
- 
+
 .col-sm-12 {
     height: 100%;
     padding: 0px !important;
-    margin: 0px !important; 
+    margin: 0px !important;
 }
 
-.container-fluid { 
+.container-fluid {
     height: 100%;
 }
- 
 
-#coupon-container { 
+@media print {
+    .no-print,
+    .no-print * {
+        display: none !important;
+    }
+}
+
+#coupon-container {
     float: left;
     position: relative;
-  
-} 
- 
+}
+
 .qrcode-img {
-    position:absolute;   
+    position: absolute;
     bottom: 4%;
-    right : 4%; 
+    right: 4%;
     width: 20%;
     height: 15%;
-} 
+}
 
 @media (min-width:450px) {
     .coupon-img {
