Removed uppercase text-transform for case sensitive code

--- a/coupon/static/coupon/css/redeem.css
+++ b/coupon/static/coupon/css/redeem.css
@@ -81,6 +81,10 @@ label {
     white-space: nowrap;
 }
 
+label#no-transform {
+    text-transform: none;
+}
+
 input:focus,
 input:active {
     background: #fe97c0;
