--- a/coupon/templates/coupon/invalid_coupon.html
+++ b/coupon/templates/coupon/invalid_coupon.html
@@ -13,7 +13,7 @@
 	  		 <div class="col-sm-12">  
 			  <div id="summary">
 			    <h1>Code Redeem</h1>
-			    <label><strong>CODE:</strong> {{code}}</label> 
+			    <label id="no-transform"><strong>CODE:</strong> {{code}}</label>
 			    <div class="center-buttons">
 				    <label class="expired"><strong>INVALID COUPON UID</strong></label>
 			    </div>
