--- a/coupon/templates/coupon/not_active.html
+++ b/coupon/templates/coupon/not_active.html
@@ -13,7 +13,7 @@
 	  		 <div class="col-sm-12">  
 			  <div id="summary">
 			    <h1>Code Redeem</h1>
-			    <label><strong>CODE:</strong> {{code}}</label>
+			    <label id="no-transform"><strong>CODE:</strong> {{code}}</label>
 			    <label><strong>START:</strong> {{started}}</label> 
 			    <div class="center-buttons">
 				    <label class="expired"><strong>COUPON NOT ACTIVE YET</strong></label>
