--- a/coupon/templates/coupon/redeem.html
+++ b/coupon/templates/coupon/redeem.html
@@ -13,7 +13,7 @@
 	  		 <div class="col-sm-12">  
 			  <div id="summary">
 			    <h1>Code Redeem</h1>
-			    <label><strong>CODE:</strong> {{code}}</label>
+			    <label id="no-transform"><strong>CODE:</strong> {{code}}</label>
 			    <label><strong>CREATED:</strong> {{created}}</label>
 			    <label><strong>START:</strong> {{started}}</label> 
 			    <label><strong>EXPIRES:</strong> {{expires}}</label>
