Added search bar and filtering in admin and changed refresh rate to 12 hours

--- a/coupon/templates/coupon/used_coupon.html
+++ b/coupon/templates/coupon/used_coupon.html
@@ -9,7 +9,7 @@
     <div class="jumbotron vertical-center"> 
         <div class="container">
             <h2>Sorry :'(</h2>
-            <p>You can only generate 1 coupon per day.</p>
+            <p>You can only redeem 1 coupon per day.</p>
             <img class="froyo-img" src="http://www.menchies.com/images/characters/barry.png"></img>
         </div>
     </div>
