--- a/coupon/static/coupon/css/generate.css
+++ b/coupon/static/coupon/css/generate.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto');
+@import url('https://fonts.googleapis.com/css?family=Droid+Sans');
 * {
     box-sizing: border-box;
 }
@@ -43,6 +44,18 @@ span#instructions {
     color: #7c7d7e;
 }
 
+span#like-us-text {
+    font-family: 'Droid Sans', sans-serif;
+    font-size: 13px;
+    color: #7c7d7e;
+    padding-left: 14px;
+    display: inline-block;
+}
+
+.glyphicon-heart {
+    color: #f22f6a;
+}
+
 .qrcode-img {
     position: absolute;
     bottom: 4%;
@@ -68,6 +81,9 @@ img {
         width: 450px;
     }
     span#instructions {
+        font-size: 15px;
+    }
+    span#like-us-text {
         font-size: 15px;
     }
 }
