Removed like button from print preview

--- a/coupon/templates/coupon/generate.html
+++ b/coupon/templates/coupon/generate.html
@@ -13,7 +13,7 @@
                 <img class="coupon-img img-responsive" src="{% static 'coupon/images/coupon-bg.jpg' %}" alt="{{ text }}" /> {% qr_from_text "100" %} 
             </div>
         </div>
-        <div class="col-sm-12">
+        <div class="col-sm-12 no-print">
         <span id="like-us-text">Like us on Facebook! <span class="glyphicon glyphicon-heart"></span></span>
         <div class="fb-like" data-href="https://www.facebook.com/menchiesoakridges/" data-layout="button_count" data-action="like" data-size="small" data-show-faces="true" data-share="true"></div>
 
