--- a/coupon/templates/coupon/generate.html
+++ b/coupon/templates/coupon/generate.html
@@ -19,6 +19,23 @@
 
         </div>
     </div>
+    <!-- Creates the bootstrap modal where the image will appear -->
+<div class="modal fade" id="imagemodal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
+        <h4 class="modal-title" id="myModalLabel">QR Code</h4>
+      </div>
+      <div class="modal-body">
+       <center> <img src="" id="imagepreview" style="width: 90%; height: 90%;" ></center>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
 </div>
 {% endblock %} {% block customjs %}
 <script>
@@ -30,6 +47,11 @@ $(document).ready(function() {
     $(window).focus(function() {
       location.reload();
     });
+});
+
+$("#coupon-container").on("click", function() {
+   $('#imagepreview').attr('src', $('.qrcode-img').attr('src')); // here asign the image to the modal when the user click the enlarge link
+   $('#imagemodal').modal('show'); // imagemodal is the id attribute assigned to the bootstrap modal, then i use the show function
 });
 
 (function(d, s, id) {
