--- a/coupon/templates/coupon/used_coupon.html
+++ b/coupon/templates/coupon/used_coupon.html
@@ -20,7 +20,7 @@
 <script> 
 $(document).ready(function() {
     $(window).focus(function() {
-      location.reload();
+      location.reload(true);
     });
 });
 </script>
