--- a/coupon/templates/coupon/generate.html
+++ b/coupon/templates/coupon/generate.html
@@ -51,7 +51,7 @@
                     </br>
                     <p><strong>SCREENSHOTING COUPON (NOT RECOMMENDED):</strong> If you decide to screenshot the coupon, press anywhere on the coupon image and screenshot the large QR code that pops up.</p>
                     </br>
-                    <p><strong>HOW IT WORKS:</strong> Print or present coupon on your smartphone and we will scan your QR code to redeem offer.</p>  
+                    <p><strong>HOW IT WORKS:</strong> Print or present coupon on your smartphone and we will scan your QR code to redeem offer. <u>Every coupon code can only be redeemed once</u>, but you can generate a new coupon the next day.</p>  
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Yes, I understand.</button>
