--- a/coupon/templates/coupon/generate.html
+++ b/coupon/templates/coupon/generate.html
@@ -47,7 +47,7 @@
                     <h4 class="modal-title">Instructions</h4>
                 </div>
                 <div class="modal-body">
-                    <p><strong>IMPORTANT:</strong> Copies of coupon will <b>NOT</b> be accepted! Every code is unique per household.</p>
+                    <p><strong>IMPORTANT:</strong> Coupon codes are unique. Don't print multiple copies.</p>
                     </br>
                     <p><strong>SCREENSHOTING COUPON (NOT RECOMMENDED):</strong> If you decide to screenshot the coupon, press anywhere on the coupon image and screenshot the large QR code that pops up.</p>
                     </br>
