Get attention of customers by making text red

--- a/coupon/templates/coupon/generate.html
+++ b/coupon/templates/coupon/generate.html
@@ -49,7 +49,7 @@
                 <div class="modal-body">
                     <p><strong>IMPORTANT:</strong> Coupon codes are unique. Don't print multiple copies.</p>
                     </br>
-                    <p><strong>SCREENSHOTING COUPON (NOT RECOMMENDED):</strong> If you decide to screenshot the coupon, press anywhere on the coupon image and screenshot the large QR code that pops up.</p>
+                    <p><strong>SCREENSHOTING COUPON </strong><span style="color:red">(NOT RECOMMENDED)</span>: If you decide to screenshot the coupon, press anywhere on the coupon image and screenshot the large QR code that pops up.</p>
                     </br>
                     <p><strong>HOW IT WORKS:</strong> Print or present coupon on your smartphone and we will scan your QR code to redeem offer. <u>Every coupon code can only be redeemed once</u>, but you can generate a new coupon the next day.</p>  
                 </div>
