--- a/coupon/static/coupon/css/codegate.css
+++ b/coupon/static/coupon/css/codegate.css
@@ -30,7 +30,7 @@ strong {
 input,
 button,
 textarea,
-.redeem-coupon, .cancel-coupon {
+.submit-btn {
     display: inline-block;
     transition: all .4s ease-in-out;
     margin: 0 auto;
@@ -114,7 +114,7 @@ input:active {
 
 button {
     padding: 0 25px;
-    width: 49%;
+    width: 100%;
     height: 60px;
     font-size: 12px;
     font-weight: 400;
@@ -128,9 +128,8 @@ button {
     background: #fafafc;
 }
 
-button:hover {
-    background: #fe97c0;
-    color: white;
+button:hover { 
+    color: #fe97c0;
 }
 
 .expired {
