--- a/coupon/templates/coupon/code_gate.html
+++ b/coupon/templates/coupon/code_gate.html
@@ -12,7 +12,7 @@
         <div class="col-sm-12">
             <div id="summary">
                 <h1>Code Gate</h1>
-                <input id="code" autofocus></input>
+                <input id="code"></input>
                 <div class="center-buttons">
                     <button class="submit-btn">Verify</button>
                 </div>
@@ -28,7 +28,7 @@
 var typingTimer;                //timer identifier
 var doneTypingInterval = 2000;  //time in ms 
 
-$('#code').on('keyup keypress keydown', function() {
+$('#code').on('keyup keypress', function() {
     clearTimeout(typingTimer);
     if ($('#code').val()) {
         typingTimer = setTimeout(doneTyping, doneTypingInterval);
@@ -46,7 +46,7 @@ $(".submit-btn").click(function() {
 function redeemCode() {
     var root = location.protocol + '//' + location.host;
     var url_mask = "{% url 'redeem' code=1234 %}".replace(/1234/, $("#code").val());
-    window.location.href = (root + url_mask);
+    location.href = root + url_mask;
 }
 </script>
 {% endblock %}
