--- a/coupon/templates/coupon/already_redeemed.html
+++ b/coupon/templates/coupon/already_redeemed.html
@@ -20,6 +20,7 @@
 			    <label><strong>REDEEMED:</strong> {{redeemed}}</label>
 			    <div class="center-buttons">
 				    <label class="expired"><strong>ALREADY REDEEMED</strong></label>
+				    <button class="scan-again">Scan Again</button>
 			    </div>
 			  </div> 
 	  		 </div> 
