--- a/coupon/templates/coupon/expired.html
+++ b/coupon/templates/coupon/expired.html
@@ -18,6 +18,7 @@
 			    <label><strong>EXPIRES:</strong> {{expires}}</label>
 			    <div class="center-buttons">
 				    <label class="expired"><strong>EXPIRED</strong></label>
+				    <button class="scan-again">Scan Again</button>
 			    </div>
 			  </div> 
 	  		 </div> 
