--- a/coupon/templates/coupon/invalid_coupon.html
+++ b/coupon/templates/coupon/invalid_coupon.html
@@ -16,7 +16,9 @@
 			    <label id="no-transform"><strong>CODE:</strong> {{code}}</label>
 			    <div class="center-buttons">
 				    <label class="expired"><strong>INVALID COUPON UID</strong></label>
-			    </div>
+				    <button class="scan-again">Scan Again</button>
+			    </div> 
+			  </div> 
 			  </div> 
 	  		 </div> 
 	  	</div>
