--- a/coupon/templates/coupon/not_active.html
+++ b/coupon/templates/coupon/not_active.html
@@ -17,6 +17,7 @@
 			    <label><strong>START:</strong> {{started}}</label> 
 			    <div class="center-buttons">
 				    <label class="expired"><strong>COUPON NOT ACTIVE YET</strong></label>
+				    <button class="scan-again">Scan Again</button>
 			    </div>
 			  </div> 
 	  		 </div> 
