--- a/coupon/static/coupon/css/generate.css
+++ b/coupon/static/coupon/css/generate.css
@@ -8,7 +8,7 @@ body {
     background: #f6d9eb;
     width: 100%;
     height: 100%;
-    background-color: #f7f9f8;
+    background-color: #f5ee9e;
 }
 
 .col-sm-12 {
@@ -49,14 +49,14 @@ body {
 }
 
 .print-bar {
-    background: white;
+    background: #60a3dc;
     text-align: center;
 }
 
 span#instructions {
     font-family: 'Roboto', sans-serif;
     font-size: 11px;
-    color: #7c7d7e;
+    color: white;
 }
 
 span#like-us-text {
@@ -73,10 +73,10 @@ span#like-us-text {
 
 .barcode-img {
     position: absolute;
-    bottom: 3%;
-    right: 0%; 
-    width: 35%;
+    bottom: 6%;
+    right: 29%;  
     height: 15%;
+    background: white;
 }
 
 img {
