--- a/coupon/templates/coupon/generate.html
+++ b/coupon/templates/coupon/generate.html
@@ -47,11 +47,8 @@
                     <h4 class="modal-title">Instructions</h4>
                 </div>
                 <div class="modal-body">
-                    <p><strong>IMPORTANT:</strong> Barcodes are unique. Don't print multiple copies.</p>
-                    </br>
-                    <p><strong>SCREENSHOTING COUPON </strong><span style="color:red">(NOT RECOMMENDED)</span>: If you decide to screenshot the coupon, press anywhere on the coupon image and screenshot the large barcode that pops up.</p>
-                    </br>
-                    <p><strong>HOW IT WORKS:</strong> Print or present coupon on your smartphone and we will scan your barcode to redeem offer. <u>Every coupon barcode can only be redeemed once</u>, but you can generate a new coupon the next day.</p>  
+                    <p><strong>IMPORTANT:</strong> Barcodes are unique. <b>Don't print multiple copies.</b></p> 
+                    <p><strong>HOW IT WORKS:</strong> Print or present coupon on your smartphone and we will scan your barcode to redeem offer. <u>Every coupon barcode can only be redeemed <b>once</b></u>, but you can generate a coupon with a new barcode the next day.</p>  
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Yes, I understand.</button>
