Fixed barcode in print preview

--- a/coupon/templates/coupon/generate.html
+++ b/coupon/templates/coupon/generate.html
@@ -47,7 +47,8 @@
                     <h4 class="modal-title">Instructions</h4>
                 </div>
                 <div class="modal-body">
-                    <p><strong>IMPORTANT:</strong> Barcodes are unique. <b>Don't print multiple copies.</b></p> 
+                    <p><strong>IMPORTANT:</strong> Barcodes are unique per household (IP Address). <b>Don't print multiple copies.</b></p> 
+                    </br>
                     <p><strong>HOW IT WORKS:</strong> Print or present coupon on your smartphone and we will scan your barcode to redeem offer. <u>Every coupon barcode can only be redeemed <b>once</b></u>, but you can generate a coupon with a new barcode the next day.</p>  
                 </div>
                 <div class="modal-footer">
