--- a/coupon/static/coupon/css/generate.css
+++ b/coupon/static/coupon/css/generate.css
@@ -91,6 +91,10 @@ img {
         height: 60% !important;
         width: 60% !important;
     }
+
+    .barcode-img { 
+        background: white !important;
+    }
 }
 
 @media (min-width:450px) {
