Fixes and changes
Added delegated event handler for scan again and allowed date_redeemed
field to be blank. Decided to also remove page redirect after user
stops typing.

--- a/coupon/templates/coupon/base.html
+++ b/coupon/templates/coupon/base.html
@@ -16,8 +16,8 @@
 
 <body>
     {% block content %} {% endblock %}
-    <script>
-    $(".scan-again").click(function() {
+    <script> 
+    $('.center-buttons').on('click', '.scan-again', function(){
         scan_again();
     });
 
