--- a/coupon/static/coupon/css/generate.css
+++ b/coupon/static/coupon/css/generate.css
@@ -4,11 +4,10 @@
     box-sizing: border-box;
 }
 
-body {
-    background: #f6d9eb;
+body { 
     width: 100%;
     height: 100%;
-    background-color: #f5ee9e;
+    background-color: white;
 }
 
 .col-sm-12 {
@@ -23,17 +22,10 @@ body {
     height: 100%;
 }
 
-@media print {
-    .no-print,
-    .no-print * {
-        display: none !important;
-    }
-}
-
 #coupon-container {
     float: left;
     position: relative;
-    overflow: hidden;
+    overflow: hidden; 
 }
 
 .modal-body {
@@ -84,6 +76,14 @@ span#like-us-text {
 img {
     pointer-events: none;
     -webkit-user-select: none;
+}
+
+
+@media print {
+    .no-print,
+    .no-print * {
+        display: none !important;
+    }
 }
 
 @media print {
